--- a/package.json
+++ b/package.json
@@ -1,73 +1,77 @@
 {
-    "name": "whiteout-mail",
-    "version": "0.0.1",
-    "description": "Mail App with integrated OpenPGP encryption.",
-    "author": "Whiteout Networks",
-    "homepage": "https://whiteout.io",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/whiteout-io/mail-html5.git"
-    },
-    "keywords": [
-        "email",
-        "mail",
-        "client",
-        "app",
-        "openpgp",
-        "pgp",
-        "gpg",
-        "imap",
-        "smtp"
-    ],
-    "engines": {
-        "node": ">=0.10"
-    },
-    "scripts": {
-        "test": "grunt && grunt test",
-        "start": "node server.js",
-        "postinstall": "dir=$(pwd) && cd node_modules/mailreader/ && npm install --production && cd $dir"
-    },
-    "dependencies": {
-        "axe-logger": "~0.0.2",
-        "compression": "^1.0.11",
-        "config": "^1.0.2",
-        "crypto-lib": "~0.2.1",
-        "dompurify": "~0.4.2",
-        "express": "^4.8.3",
-        "imap-client": "~0.4.3",
-        "jquery": "~2.1.1",
-        "mailreader": "~0.4.0",
-        "morgan": "^1.2.3",
-        "ng-infinite-scroll": "~1.1.2",
-        "npmlog": "^0.1.1",
-        "pgpbuilder": "~0.4.0",
-        "pgpmailer": "~0.4.0",
-        "socket.io": "^1.0.6",
-        "tcp-socket": "~0.3.13",
-        "wo-smtpclient": "^0.3.8"
-    },
-    "devDependencies": {
-        "angularjs": "https://github.com/whiteout-io/angular.js/tarball/npm-version",
-        "browsercrow": "https://github.com/whiteout-io/browsercrow/tarball/master",
-        "browsersmtp": "https://github.com/whiteout-io/browsersmtp/tarball/master",
-        "chai": "~1.7.2",
-        "grunt": "~0.4.1",
-        "grunt-autoprefixer": "~0.7.2",
-        "grunt-browserify": "^3.0.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-compress": "~0.5.2",
-        "grunt-contrib-connect": "~0.5.0",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-jshint": "~0.6.4",
-        "grunt-contrib-sass": "~0.7.3",
-        "grunt-contrib-uglify": "^0.6.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-csso": "~0.6.1",
-        "grunt-exorcise": "^0.2.0",
-        "grunt-manifest": "^0.4.0",
-        "grunt-mocha-phantomjs": "^0.6.0",
-        "mocha": "^1.21.4",
-        "sinon": "~1.7.3",
-        "time-grunt": "^1.0.0"
-    }
+  "name": "whiteout-mail",
+  "version": "0.0.1",
+  "description": "Mail App with integrated OpenPGP encryption.",
+  "author": "Whiteout Networks",
+  "homepage": "https://whiteout.io",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/whiteout-io/mail-html5.git"
+  },
+  "keywords": [
+    "email",
+    "mail",
+    "client",
+    "app",
+    "openpgp",
+    "pgp",
+    "gpg",
+    "imap",
+    "smtp"
+  ],
+  "engines": {
+    "node": ">=0.10"
+  },
+  "scripts": {
+    "test": "grunt && grunt test",
+    "start": "node server.js",
+    "postinstall": "dir=$(pwd) && cd node_modules/mailreader/ && npm install --production && cd $dir"
+  },
+  "dependencies": {
+    "axe-logger": "~0.0.2",
+    "compression": "^1.0.11",
+	"config": "^1.0.2",
+    "crypto-lib": "~0.2.1",
+    "dompurify": "~0.4.2",
+    "express": "^4.8.3",
+    "imap-client": "~0.4.3",
+    "jquery": "~2.1.1",
+    "mailreader": "~0.4.0",
+    "ng-infinite-scroll": "~1.1.2",
+    "pgpbuilder": "~0.4.0",
+    "pgpmailer": "~0.4.0",
+    "wo-smtpclient": "^0.3.8",
+    "tcp-socket": "~0.3.15",
+    "config": "^1.0.2",
+    "morgan": "^1.2.3",
+    "npmlog": "^0.1.1",
+    "socket.io": "^1.1.0"
+  },
+  "devDependencies": {
+    "angularjs": "https://github.com/whiteout-io/angular.js/tarball/npm-version",
+    "browsercrow": "https://github.com/whiteout-io/browsercrow/tarball/master",
+    "browsersmtp": "https://github.com/whiteout-io/browsersmtp/tarball/master",
+    "chai": "~1.7.2",
+    "grunt": "~0.4.1",
+    "grunt-browserify": "^3.0.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-manifest": "^0.4.0",
+    "grunt-autoprefixer": "~0.7.2",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-csso": "~0.6.1",
+    "grunt-exorcise": "^0.2.0",
+    "grunt-mocha-phantomjs": "^0.6.0",
+    "mocha": "^1.21.4",
+    "sinon": "~1.7.3",
+    "time-grunt": "^1.0.0",
+    "grunt-string-replace": "~1.0.0",
+    "grunt-svgmin": "~1.0.0",
+    "grunt-svgstore": "~0.3.4"
+  }
 }
